[package]
name = "kzg-solvency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-r1cs-std = "0.4.0"
ark-std = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
